frontend_tests/negative/unresolved_import/go.mod
module example.com/renvotests/negative/unresolved

go 1.25
